--- a/EntryNow.WebApp/Pages/Index.razor
+++ b/EntryNow.WebApp/Pages/Index.razor
@@ -56,7 +56,7 @@
                         {
                             <h3>@referencesCount</h3>
                         }
-                        <p>Total Entries</p>
+                        <p>Total References</p>
                     </div>
                     <div class="icon">
                         <i class="fas fa-user-shield"></i>
