--- a/EntryNow.WebApp/Pages/References/Index.razor
+++ b/EntryNow.WebApp/Pages/References/Index.razor
@@ -27,6 +27,10 @@
             <div class="card">
               <div class="card-header">
                   <h3 class="card-title">View the List of References</h3>
+                    @if (totalReferences != 0)
+                    {
+                        <a style="float:right; color:grey;">Total @totalReferences References Found</a>
+                    }
               </div>
               <!-- /.card-header -->
               <div class="card-body table-responsive p-0">
@@ -85,12 +89,13 @@
             @if (totalPages > 0)
             {
             <div class="card-footer clearfix">
+                    Page @_page of @totalPages Selected
                     <ul class="pagination pagination-sm m-0 float-right">
-                        @if (page == 1)
+                        @if (_page == 1)
                         {
                             <li class="page-item disabled"><a class="page-link" @onclick="GetDataOnPreviousPage">&laquo;</a></li>
                         }
-                        @if (page != 1)
+                        @if (_page != 1)
                         {
                             <li class="page-item"><a class="page-link" @onclick="GetDataOnPreviousPage" href="" @onclick:preventDefault>&laquo;</a></li>
                         }
@@ -102,11 +107,11 @@
                                 <li class="page-item"><a class="page-link" @onclick="@(() => GetDataByPageNumber(buttonNumber))" href="" @onclick:preventDefault>@i</a></li>
                             }
                         }
-                        @if (page == totalPages)
+                        @if (_page == totalPages)
                         {
                             <li class="page-item disabled"><a class="page-link" @onclick="GetDataOnNextPage">&raquo;</a></li>
                         }
-                        @if (page != totalPages)
+                        @if (_page != totalPages)
                         {
                             <li class="page-item"><a class="page-link" @onclick="GetDataOnNextPage" href="" @onclick:preventDefault>&raquo;</a></li>
                         }
@@ -121,8 +126,9 @@
     <!-- /.content -->
 
 @code {
-    private int page = 1;
+    private int _page = 1;
     private int pageSize = 10;
+    private int totalReferences;
     private bool loading;
     private IList<References> entries;
     private int totalPages;
@@ -139,7 +145,7 @@
     private async Task GetDataOnNextPage()
     {
         loading = true;
-        page += 1;
+        _page += 1;
         await GetData();
         loading = false;
     }
@@ -147,7 +153,7 @@
     private async Task GetDataByPageNumber(int pageNumber)
     {
         loading = true;
-        page = pageNumber;
+        _page = pageNumber;
         await GetData();
         loading = false;
     }
@@ -155,7 +161,7 @@
     private async Task GetDataOnPreviousPage()
     {
         loading = true;
-        page -= 1;
+        _page -= 1;
         await GetData();
         loading = false;
     }
@@ -166,7 +172,7 @@
         {
             using (System.Net.Http.HttpClient httpClient = new System.Net.Http.HttpClient())
             {
-                using (System.Net.Http.HttpResponseMessage response = await httpClient.GetAsync("https://entrynowapi.azurewebsites.net/api/reference/get?pageNumber=" + page + "&perPage=" + pageSize))
+                using (System.Net.Http.HttpResponseMessage response = await httpClient.GetAsync("https://entrynowapi.azurewebsites.net/api/reference/get?pageNumber=" + _page + "&perPage=" + pageSize))
                 {
                     string apiResponse = await response.Content.ReadAsStringAsync();
                     entries = Newtonsoft.Json.JsonConvert.DeserializeObject<IList<References>>(apiResponse);
@@ -190,7 +196,8 @@
                 using (System.Net.Http.HttpResponseMessage response = await httpClient.GetAsync("https://entrynowapi.azurewebsites.net/api/reference/get/count"))
                 {
                     string apiResponse = await response.Content.ReadAsStringAsync();
-                    totalPages = (int)Math.Ceiling((decimal)Int32.Parse(apiResponse) / (decimal)pageSize);
+                    totalReferences = Int32.Parse(apiResponse);
+                    totalPages = (int)Math.Ceiling((decimal)totalReferences / (decimal)pageSize);
                 }
             }
         }
