--- a/EntryNow.WebApp/Pages/References/Index.razor
+++ b/EntryNow.WebApp/Pages/References/Index.razor
@@ -104,7 +104,14 @@
                             @for (int i = 1; i <= totalPages; i++)
                             {
                                 int buttonNumber = i;
-                                <li class="page-item"><a class="page-link" @onclick="@(() => GetDataByPageNumber(buttonNumber))" href="" @onclick:preventDefault>@i</a></li>
+                                @if (buttonNumber == _page)
+                                {
+                                    <li class="page-item active"><a class="page-link" @onclick="@(() => GetDataByPageNumber(buttonNumber))" href="" @onclick:preventDefault>@i</a></li>
+                                }
+                                else
+                                {
+                                    <li class="page-item"><a class="page-link" @onclick="@(() => GetDataByPageNumber(buttonNumber))" href="" @onclick:preventDefault>@i</a></li>
+                                }
                             }
                         }
                         @if (_page == totalPages)
