--- a/EntryNow.WebApp/Shared/Footer.razor
+++ b/EntryNow.WebApp/Shared/Footer.razor
@@ -1,6 +1,6 @@
 ﻿<footer class="main-footer">
     <strong>Copyright &copy; 2021 
-        <a href="https://www.google.com/">
+        <a href="">
             Entry Now
         </a>.
     </strong>
