--- a/EntryNow.WebApp/Pages/Entries/Index.razor
+++ b/EntryNow.WebApp/Pages/Entries/Index.razor
@@ -47,7 +47,7 @@
                       <th>Reference</th>
                       <th>UC</th>
                       <th>Taluka</th>
-                      <th>Deh</th>
+                      @*<th>Deh</th>*@
                       <th>Village</th>
                       <th>City</th>
                       <th>Address</th>
@@ -67,7 +67,7 @@
                                     <td>@entrie.Reference</td>
                                     <td>@entrie.UnionCounsil</td>
                                     <td>@entrie.Taluka</td>
-                                    <td>@entrie.Deh</td>
+                                    @*<td>@entrie.Deh</td>*@
                                     <td>@entrie.Village</td>
                                     <td>@entrie.City</td>
                                     <td>@entrie.Address</td>
