--- a/EntryNow.WebApp/Pages/Entries/Add.razor
+++ b/EntryNow.WebApp/Pages/Entries/Add.razor
@@ -1,4 +1,5 @@
 ﻿@page "/entries/add"
+@using EntryNow.WebApp.Constants
 @attribute [Authorize]
 @inject IAlertService AlertService
 @inject NavigationManager NavigationManager
@@ -36,7 +37,7 @@
           <div class="card-body">
               <EditForm Model="@model" OnValidSubmit="OnValidSubmit">
                 <DataAnnotationsValidator />
-                @if (villages != null)
+                @if (surnames != null)
                 {
                        <div class="row">
                           <div class="col-md-4">
@@ -52,11 +53,11 @@
                               </div>
                               <div class="form-group">
                                   <label>Taluka</label>
-                                  <select class="form-control select2" style="width: 100%;" @bind="model.TalukaId">
+                                  <select class="form-control select2" style="width: 100%;" @onchange="@FillUcDropDown">
                                         <option selected="selected">Select Taluka</option>
-                                        @foreach(var item in talukas)
+                                        @foreach(var taluka in talukas)
                                         {
-                                            <option value="@item.Id">@item.Value</option>
+                                            <option value="@taluka">@taluka</option>
                                         }
                                   </select>
                               </div>
@@ -79,38 +80,42 @@
                               </div>
                               <div class="form-group">
                                   <label>District</label>
-                                  <select class="form-control select2" style="width: 100%;" @bind="model.DistrictId">
+                                  <select class="form-control select2" style="width: 100%;" @bind="model.District">
                                         <option selected="selected">Select District</option>
-                                        @foreach(var item in districts)
+                                        @foreach(var district in districts)
                                         {
-                                            <option value="@item.Id">@item.Value</option>
+                                            <option value="@district">@district</option>
                                         }
                                   </select>
                               </div>
                           </div>
                           <div class="col-md-4">
-                              <div class="form-group">
+                                <div class="form-group">
                                   <label>Contact Number</label>
-                                  <InputText @bind-Value="model.ContactNumber" class="form-control" />
-                                  <ValidationMessage For="@(() => model.ContactNumber)" />
-                              </div>
+                                  <div class="input-group">
+                                    <div class="input-group-prepend">
+                                      <span class="input-group-text"><i class="fas fa-phone"></i></span>
+                                    </div>
+                                    <InputText @bind-Value="model.ContactNumber" class="form-control" data-inputmask='"mask": "0399-999 9999"' data-mask />
+                                  </div>
+                                </div>
                               <div class="form-group">
                                   <label>City</label>
-                                  <select class="form-control select2" style="width: 100%;" @bind="model.CityId">
+                                  <select class="form-control select2" style="width: 100%;" @bind="model.City">
                                         <option selected="selected">Select City</option>
-                                        @foreach(var item in cities)
+                                        @foreach(var city in cities)
                                         {
-                                            <option value="@item.Id">@item.Value</option>
+                                            <option value="@city">@city</option>
                                         }
                                   </select>
                               </div>
                               <div class="form-group">
                                   <label>Union Council</label>
-                                  <select class="form-control select2" style="width: 100%;" @bind="model.UnionCounsilId">
+                                  <select class="form-control select2" style="width: 100%;" @onchange="@FillVillagesDropDown" >
                                         <option selected="selected">Select UC</option>
-                                        @foreach(var item in unioncounsils)
+                                        @foreach(var uc in unioncounsils)
                                         {
-                                            <option value="@item.Id">@item.Value</option>
+                                            <option value="@uc">@uc</option>
                                         }
                                   </select>
                               </div>
@@ -119,12 +124,12 @@
                        <div class="row">
                           <div class="col-md-4">
                               <div class="form-group">
-                                  <label>Deh</label>
-                                  <select class="form-control select2" style="width: 100%;" @bind="model.DehId">
-                                        <option selected="selected">Select Deh</option>
-                                        @foreach(var item in dehs)
+                                  <label>Village</label>
+                                  <select class="form-control select2" style="width: 100%;" @bind="model.Village">
+                                        <option selected="selected">Select Village</option>
+                                        @foreach(var village in villages)
                                         {
-                                            <option value="@item.Id">@item.Value</option>
+                                            <option value="@village">@village</option>
                                         }
                                   </select>
                               </div>
@@ -182,16 +187,16 @@
     </section>
 
 @code {
-    private Entries_ViewModel model = new Entries_ViewModel();
+    private Entries_CreateViewModel model = new Entries_CreateViewModel();
     private string referenceValue = "";
     private IList<SearchValues> searchList;
-    private IList<DropDowns> cities;
-    private IList<DropDowns> dehs;
-    private IList<DropDowns> districts;
     private IList<DropDowns> surnames;
-    private IList<DropDowns> talukas;
-    private IList<DropDowns> unioncounsils;
-    private IList<DropDowns> villages;
+    private List<string> cities = new List<string>();
+    //private IList<DropDowns> dehs;
+    private List<string> districts = new List<string>();
+    private List<string> talukas = new List<string>();
+    private List<string> unioncounsils = new List<string>();
+    private List<string> villages = new List<string>();
     private string baseUrl = "https://entrynowapi.azurewebsites.net/api/";
     private bool loading;
     private bool pageLoading;
@@ -199,6 +204,9 @@
     protected override async Task OnInitializedAsync()
     {
         pageLoading = true;
+        districts.AddRange(Global.Districts);
+        talukas.AddRange(Global.Talukas);
+        cities.AddRange(Global.Cities);
         await FillDropDowns();
         pageLoading = false;
     }
@@ -226,34 +234,115 @@
             }
         }
     }
+
+    private void FillUcDropDown (ChangeEventArgs e)
+    {
+        model.Taluka = e.Value.ToString();
+        if(model.Taluka == "Hala")
+        {
+            unioncounsils.AddRange(Global.UnionCounsil_Hala);
+        }
+        if(model.Taluka == "Saeedabad")
+        {
+            unioncounsils.AddRange(Global.UnionCounsil_Saeedabad);
+        }
+        if(model.Taluka == "Matiari")
+        {
+            unioncounsils.AddRange(Global.UnionCounsil_Matiari);
+        }
+    }
+    private void FillVillagesDropDown (ChangeEventArgs e)
+    {
+        model.UnionCouncil = e.Value.ToString();
+        if(model.UnionCouncil == "Khandu")
+        {
+            villages.AddRange(Global.Villages_Khandu);   
+        }
+        if(model.UnionCouncil == "Karam Khan Nizamani")
+        {
+            villages.AddRange(Global.Villages_KaramKhanNizamani);   
+        }
+        if(model.UnionCouncil == "Ajan Shah")
+        {
+            villages.AddRange(Global.Villages_AjanShah);   
+        }
+        if(model.UnionCouncil == "Bhanoth")
+        {
+            villages.AddRange(Global.Villages_Bhanoth);   
+        }
+        if(model.UnionCouncil == "Bhit Shah")
+        {
+            villages.AddRange(Global.Villages_BhitShah);   
+        }
+        if(model.UnionCouncil == "Fateh Muhammad Shah Ajnani")
+        {
+            villages.AddRange(Global.Villages_FatehMuhammadShahAjnani);   
+        }
+        if(model.UnionCouncil == "Abdul Wahid Burira")
+        {
+            villages.AddRange(Global.Villages_AbdulWahidBurira);   
+        }
+        if(model.UnionCouncil == "BD Kaka")
+        {
+            villages.AddRange(Global.Villages_BDKaka);   
+        }
+        if(model.UnionCouncil == "Faqeerabad")
+        {
+            villages.AddRange(Global.Villages_Faqeerabad);   
+        }
+        if(model.UnionCouncil == "Makhdoom joon Landhiyoon")
+        {
+            villages.AddRange(Global.Villages_MakhdoomjoonLandhiyoon);   
+        }
+        if(model.UnionCouncil == "Old Saeedabad")
+        {
+            villages.AddRange(Global.Villages_OldSaeedabad);   
+        }
+        if(model.UnionCouncil == "Ramzan Unar")
+        {
+            villages.AddRange(Global.Villages_RamzanUnar);   
+        }
+        if(model.UnionCouncil == "Shahmir Rahu")
+        {
+            villages.AddRange(Global.Villages_ShahmirRahu);   
+        }
+        if(model.UnionCouncil == "Sikandarabad")
+        {
+            villages.AddRange(Global.Villages_Sikandarabad);   
+        }
+        if(model.UnionCouncil == "Zair Peer")
+        {
+            villages.AddRange(Global.Villages_ZairPeer);   
+        }
+    }
     private async Task FillDropDowns()
     {
         try
         {
-            using (System.Net.Http.HttpClient httpClient = new System.Net.Http.HttpClient())
-            {
-                using (System.Net.Http.HttpResponseMessage response = await httpClient.GetAsync(baseUrl + "city/dropdown")) 
-                {
-                    string apiResponse = await response.Content.ReadAsStringAsync();
-                    this.cities = Newtonsoft.Json.JsonConvert.DeserializeObject<IList<DropDowns>>(apiResponse);
-                }
-            }
-            using (System.Net.Http.HttpClient httpClient = new System.Net.Http.HttpClient())
-            {
-                using (System.Net.Http.HttpResponseMessage response = await httpClient.GetAsync(baseUrl + "deh/dropdown"))
-                {
-                    string apiResponse = await response.Content.ReadAsStringAsync();
-                    this.dehs = Newtonsoft.Json.JsonConvert.DeserializeObject<IList<DropDowns>>(apiResponse);
-                }
-            }
-            using (System.Net.Http.HttpClient httpClient = new System.Net.Http.HttpClient())
-            {
-                using (System.Net.Http.HttpResponseMessage response = await httpClient.GetAsync(baseUrl + "district/dropdown"))
-                {
-                    string apiResponse = await response.Content.ReadAsStringAsync();
-                    this.districts = Newtonsoft.Json.JsonConvert.DeserializeObject<IList<DropDowns>>(apiResponse);
-                }
-            }
+            //using (System.Net.Http.HttpClient httpClient = new System.Net.Http.HttpClient())
+            //{
+            //    using (System.Net.Http.HttpResponseMessage response = await httpClient.GetAsync(baseUrl + "city/dropdown")) 
+            //    {
+            //        string apiResponse = await response.Content.ReadAsStringAsync();
+            //        this.cities = Newtonsoft.Json.JsonConvert.DeserializeObject<IList<DropDowns>>(apiResponse);
+            //    }
+            //}
+            //using (System.Net.Http.HttpClient httpClient = new System.Net.Http.HttpClient())
+            //{
+            //    using (System.Net.Http.HttpResponseMessage response = await httpClient.GetAsync(baseUrl + "deh/dropdown"))
+            //    {
+            //        string apiResponse = await response.Content.ReadAsStringAsync();
+            //        this.dehs = Newtonsoft.Json.JsonConvert.DeserializeObject<IList<DropDowns>>(apiResponse);
+            //    }
+            //}
+            //using (System.Net.Http.HttpClient httpClient = new System.Net.Http.HttpClient())
+            //{
+            //    using (System.Net.Http.HttpResponseMessage response = await httpClient.GetAsync(baseUrl + "district/dropdown"))
+            //    {
+            //        string apiResponse = await response.Content.ReadAsStringAsync();
+            //        this.districts = Newtonsoft.Json.JsonConvert.DeserializeObject<IList<DropDowns>>(apiResponse);
+            //    }
+            //}
             using (System.Net.Http.HttpClient httpClient = new System.Net.Http.HttpClient())
             {
                 using (System.Net.Http.HttpResponseMessage response = await httpClient.GetAsync(baseUrl + "surname/dropdown"))
@@ -262,30 +351,30 @@
                     this.surnames = Newtonsoft.Json.JsonConvert.DeserializeObject<IList<DropDowns>>(apiResponse);
                 }
             }
-            using (System.Net.Http.HttpClient httpClient = new System.Net.Http.HttpClient())
-            {
-                using (System.Net.Http.HttpResponseMessage response = await httpClient.GetAsync(baseUrl + "taluka/dropdown"))
-                {
-                    string apiResponse = await response.Content.ReadAsStringAsync();
-                    this.talukas = Newtonsoft.Json.JsonConvert.DeserializeObject<IList<DropDowns>>(apiResponse);
-                }
-            }
-            using (System.Net.Http.HttpClient httpClient = new System.Net.Http.HttpClient())
-            {
-                using (System.Net.Http.HttpResponseMessage response = await httpClient.GetAsync(baseUrl + "unioncounsil/dropdown"))
-                {
-                    string apiResponse = await response.Content.ReadAsStringAsync();
-                    this.unioncounsils = Newtonsoft.Json.JsonConvert.DeserializeObject<IList<DropDowns>>(apiResponse);
-                }
-            }
-            using (System.Net.Http.HttpClient httpClient = new System.Net.Http.HttpClient())
-            {
-                using (System.Net.Http.HttpResponseMessage response = await httpClient.GetAsync(baseUrl + "village/dropdown"))
-                {
-                    string apiResponse = await response.Content.ReadAsStringAsync();
-                    this.villages = Newtonsoft.Json.JsonConvert.DeserializeObject<IList<DropDowns>>(apiResponse);
-                }
-            }
+            //using (System.Net.Http.HttpClient httpClient = new System.Net.Http.HttpClient())
+            //{
+            //    using (System.Net.Http.HttpResponseMessage response = await httpClient.GetAsync(baseUrl + "taluka/dropdown"))
+            //    {
+            //        string apiResponse = await response.Content.ReadAsStringAsync();
+            //        this.talukas = Newtonsoft.Json.JsonConvert.DeserializeObject<IList<DropDowns>>(apiResponse);
+            //    }
+            //}
+            //using (System.Net.Http.HttpClient httpClient = new System.Net.Http.HttpClient())
+            //{
+            //    using (System.Net.Http.HttpResponseMessage response = await httpClient.GetAsync(baseUrl + "unioncounsil/dropdown"))
+            //    {
+            //        string apiResponse = await response.Content.ReadAsStringAsync();
+            //        this.unioncounsils = Newtonsoft.Json.JsonConvert.DeserializeObject<IList<DropDowns>>(apiResponse);
+            //    }
+            //}
+            //using (System.Net.Http.HttpClient httpClient = new System.Net.Http.HttpClient())
+            //{
+            //    using (System.Net.Http.HttpResponseMessage response = await httpClient.GetAsync(baseUrl + "village/dropdown"))
+            //    {
+            //        string apiResponse = await response.Content.ReadAsStringAsync();
+            //        this.villages = Newtonsoft.Json.JsonConvert.DeserializeObject<IList<DropDowns>>(apiResponse);
+            //    }
+            //}
         }
         catch(Exception e)
         {
@@ -324,12 +413,6 @@
                 }
             }
         }
-
-        if(model.ReferenceId != null)
-        {
-            model.IsAReference = true;
-        }
-
         using (System.Net.Http.HttpClient httpClient = new System.Net.Http.HttpClient())
         {
             var postData = Newtonsoft.Json.JsonConvert.SerializeObject(model);
