--- a/EntryNow.WebApp/Pages/Entries/Add.razor
+++ b/EntryNow.WebApp/Pages/Entries/Add.razor
@@ -240,14 +240,17 @@
         model.Taluka = e.Value.ToString();
         if(model.Taluka == "Hala")
         {
+            unioncounsils = new List<string>();
             unioncounsils.AddRange(Global.UnionCounsil_Hala);
         }
         if(model.Taluka == "Saeedabad")
         {
+            unioncounsils = new List<string>();
             unioncounsils.AddRange(Global.UnionCounsil_Saeedabad);
         }
         if(model.Taluka == "Matiari")
         {
+            unioncounsils = new List<string>();
             unioncounsils.AddRange(Global.UnionCounsil_Matiari);
         }
     }
@@ -256,62 +259,77 @@
         model.UnionCouncil = e.Value.ToString();
         if(model.UnionCouncil == "Khandu")
         {
+            villages = new List<string>();
             villages.AddRange(Global.Villages_Khandu);   
         }
         if(model.UnionCouncil == "Karam Khan Nizamani")
         {
+            villages = new List<string>();
             villages.AddRange(Global.Villages_KaramKhanNizamani);   
         }
         if(model.UnionCouncil == "Ajan Shah")
         {
+            villages = new List<string>();
             villages.AddRange(Global.Villages_AjanShah);   
         }
         if(model.UnionCouncil == "Bhanoth")
         {
+            villages = new List<string>();
             villages.AddRange(Global.Villages_Bhanoth);   
         }
         if(model.UnionCouncil == "Bhit Shah")
         {
+            villages = new List<string>();
             villages.AddRange(Global.Villages_BhitShah);   
         }
         if(model.UnionCouncil == "Fateh Muhammad Shah Ajnani")
         {
+            villages = new List<string>();
             villages.AddRange(Global.Villages_FatehMuhammadShahAjnani);   
         }
         if(model.UnionCouncil == "Abdul Wahid Burira")
         {
+            villages = new List<string>();
             villages.AddRange(Global.Villages_AbdulWahidBurira);   
         }
         if(model.UnionCouncil == "BD Kaka")
         {
+            villages = new List<string>();
             villages.AddRange(Global.Villages_BDKaka);   
         }
         if(model.UnionCouncil == "Faqeerabad")
         {
+            villages = new List<string>();
             villages.AddRange(Global.Villages_Faqeerabad);   
         }
         if(model.UnionCouncil == "Makhdoom joon Landhiyoon")
         {
+            villages = new List<string>();
             villages.AddRange(Global.Villages_MakhdoomjoonLandhiyoon);   
         }
         if(model.UnionCouncil == "Old Saeedabad")
         {
+            villages = new List<string>();
             villages.AddRange(Global.Villages_OldSaeedabad);   
         }
         if(model.UnionCouncil == "Ramzan Unar")
         {
+            villages = new List<string>();
             villages.AddRange(Global.Villages_RamzanUnar);   
         }
         if(model.UnionCouncil == "Shahmir Rahu")
         {
+            villages = new List<string>();
             villages.AddRange(Global.Villages_ShahmirRahu);   
         }
         if(model.UnionCouncil == "Sikandarabad")
         {
+            villages = new List<string>();
             villages.AddRange(Global.Villages_Sikandarabad);   
         }
         if(model.UnionCouncil == "Zair Peer")
         {
+            villages = new List<string>();
             villages.AddRange(Global.Villages_ZairPeer);   
         }
     }
