--- a/EntryNow.WebApp/Pages/Entries/Index.razor
+++ b/EntryNow.WebApp/Pages/Entries/Index.razor
@@ -32,7 +32,8 @@
                   </NavLink>
                     @if (totalEntries != 0)
                     {
-                        <a style="float:right; color:grey;">Total @totalEntries Entries Found</a>
+                        <a href="#" style="float:right; color:grey;"><i class="fas fa-download"></i></a>
+                        <a style="float:right; color:grey;">Total @totalEntries Entries Found&nbsp;&nbsp;</a>
                     }
               </div>
               <!-- /.card-header -->
