--- a/EntryNow.WebApp/Pages/References/Index.razor
+++ b/EntryNow.WebApp/Pages/References/Index.razor
@@ -29,7 +29,8 @@
                   <h3 class="card-title">View the List of References</h3>
                     @if (totalReferences != 0)
                     {
-                        <a style="float:right; color:grey;">Total @totalReferences References Found</a>
+                        <a href="#" style="float:right; color:grey;"><i class="fas fa-download"></i></a>
+                        <a style="float:right; color:grey;">Total @totalReferences References Found&nbsp;&nbsp;</a>
                     }
               </div>
               <!-- /.card-header -->
